# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241009035413_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
