[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
secrecy = { version = "0.8", features = ["serde"] }
once_cell="1"
tracing-actix-web="0.5"
tracing ={version="0.1",features=["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
actix-web = "4"
config = "0.11.0"
uuid ={ version = "1", features = ["v4", "serde"] }
chrono="0.4.15"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

[dev-dependencies]
reqwest = "0.11"
